mlchain/network/nginx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlchain-nginx
  namespace: mlchain
  labels:
    app: mlchain-nginx
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: mlchain-nginx
  template:
    metadata:
      labels:
        app: mlchain-nginx
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      automountServiceAccountToken: false
      containers:
        - name: mlchain-nginx
          image: nginx:latest
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: mlchain-nginx
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: mlchain-nginx-config
              mountPath: /etc/nginx/conf.d
          imagePullPolicy: IfNotPresent
      volumes:
        - name: mlchain-nginx
          configMap:
            name: mlchain-nginx
        # Persistent volume could be better    
        - name: mlchain-nginx-config
          emptyDir: {}
