mlchain/network/ingress.yaml
# Ingress with nginx reverse proxy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlchain-ingress
  namespace: mlchain
spec:
  ingressClassName: 'traefik'
  rules:
    - host: mlchain.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlchain-nginx
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mlchain-nginx
                port:
                  number: 80
          - path: /console/api
            pathType: Prefix
            backend:
              service:
                name: mlchain-nginx
                port:
                  number: 80
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: mlchain-nginx
                port:
                  number: 80
          - path: /files
            pathType: Prefix
            backend:
              service:
                name: mlchain-nginx
                port:
                  number: 80
  tls:
    - secretName: mlchain-tls

---
# Traefik Ingress Route without nginx reverse proxy
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mlchain-ingressroute
  namespace: mlchain
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`mlchain.example.com`) && PathPrefix(`/`)
      middlewares:
        - name: ingress-cors
      services:
        - name: mlchain-web
          port: 3000
    - kind: Rule
      match: Host(`mlchainapi.example.com`) && PathPrefix(`/`)
      middlewares:
        - name: ingress-cors
      services:
        - name: mlchain-api
          port: 5001
    - kind: Rule
      match: Host(`consoleapi.example.com`) && PathPrefix(`/`)
      middlewares:
        - name: ingress-cors
      services:
        - name: mlchain-api
          port: 5001
    - kind: Rule
      match: Host(`mlchainapp.example.com`) && PathPrefix(`/`)
      middlewares:
        - name: ingress-cors
      services:
        - name: mlchain-api
          port: 5001
    - kind: Rule
      match: Host(`appapi.example.com`) && PathPrefix(`/`)
      middlewares:
        - name: ingress-cors
      services:
        - name: mlchain-api
          port: 5001
  tls:
    secretName: mlchain-tls
# Traefik Middleware for Ingress
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ingress-cors
  namespace: mlchain
spec:
  headers:
    accessControlAllowCredentials: true
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
      - "POST"
      - "DELETE"
      - "PATCH"
    accessControlAllowHeaders:
      # - "*"
      - "Content-Type"
      - "authorization"
    accessControlAllowOriginList:
      # - "*"
      - "https://consoleapi.example.com"
      - "https://mlchain.example.com"
      - "https://mlchainapi.example.com"
      - "https://mlchainapp.example.com"
      - "https://appapi.example.com"
    accessControlMaxAge: 100
    addVaryHeader: true
